kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booksapp
  labels:
    name: booksapp
