kubernetes/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot-postgres-k8s
#  namespace: book-store-ns
  labels:
    app: springboot-postgres-k8s
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: springboot-postgres-k8s
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-postgres-k8s
#  namespace: book-store-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-postgres-k8s
  template:
    metadata:
      labels:
        app: springboot-postgres-k8s
    spec:
      containers:
        - name: springboot-postgres-k8s
          image: ristovvski/devopsbookproject:latest
          ports:
            - containerPort: 8080
