kubernetes/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
#  namespace: book-store-ns
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
#  namespace: book-store-ns
  labels:
    app: postgres
    tier: database
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      containers:
        - name: postgres
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
