kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-ingress
#  namespace: book-store-ns
  labels:
    app: springboot-postgres-k8s
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-postgres-k8s
                port:
                  number: 80
